--- a/.ask/config
+++ b/.ask/config
@@ -1,7 +1,7 @@
 {
   "deploy_settings": {
     "default": {
-      "skill_id": "amzn1.ask.skill.0d1206ab-4f6a-42d2-99e1-03bc450c8e45",
+      "skill_id": "",
       "was_cloned": false,
       "merge": {
         "manifest": {
