--- a/lambda-update-function-configuration.json
+++ b/lambda-update-function-configuration.json
@@ -1,5 +1,5 @@
 {
-    "FunctionName": "ask-py-quiz",
+    "FunctionName": "ask-custom-python-quiz-default",
 	"Environment": {
 		"Variables": {
 			"TripTable": "myTripTable"
